Fixed spacing

--- a/containers/Treachery/Card/Card.module.css
+++ b/containers/Treachery/Card/Card.module.css
@@ -8,3 +8,9 @@
   border: 3px solid #ffd06c;
   border-radius: 5%;
 }
+
+.DescriptionPaper {
+  width: 60%;
+  padding: 5px 10px 5px 10px;
+  border: 1px solid white;
+}
